--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,9 @@
 </head>
 
 <body id="page-top" class="index">
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -20,29 +19,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">G & E Properties Inc.</a>
+                <%= link_to "G & E Properties Inc", root_path, class:"navbar-brand" %>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
+    
+                <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">About</a>
+                        <%= link_to "About", about_path %>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Rentals</a>
+                        <%= link_to "Properties", our_properties_path %>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <%= link_to "Contact", contact_path %>
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
+        
     </nav>
 
 <div class="container">
