--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -17,22 +17,71 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import url(https://fonts.googleapis.com/css?family=Berkshire+Swash);
+@import url(https://fonts.googleapis.com/css?family=Sanchez);
+@import url(https://fonts.googleapis.com/css?family=Dosis:600);
 
-// #body {
-//     background: url(<%= asset_path "park.jpg" %>) no-repeat;
-//     background-size: cover; 
-// }
+.berkshire {
+    font-family: 'Berkshire Swash', cursive;
+    font-size: 50px;
+}
+
+.sanchez {
+    font-family: 'Sanchez', serif;
+    font-size: 50px;
+}
+
+.dosis {
+    font-family: 'Dosis', sans-serif;
+    font-size: 40px;
+}
+
+#map-canvas {
+  width: 100%;
+  height: 500px;
+}
+
+/*.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+}*/
+
+.well{
+    height: 325px;
+    width: 325px;
+    font-color: black;
+}
+
+p {
+    color: black;
+}
+
+
+.center-it {
+    text-align: center;
+}
+
 
 body {
     background: url(<%= asset_path "park.jpg" %>) no-repeat center center fixed;
     background-size: cover;
 }
 
-.container {
-    align-content: center;
-    margin-top: 100px;
+.main-container {
+    text-align: center;
+    margin-top: 200px;
     color: white;
     background-color:rgba(231, 127, 31, 0.2);
+}
+
+.carousel-pics {
+    height:500px;
+    /*width:500px;*/
+    display:block;
+    margin:auto;
 }
 
 @media(min-width:768px) {
@@ -80,4 +129,37 @@ body {
 .navbar-default,
 .navbar-inverse {
     border: 0;
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+.container {
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+}
+.container .text-muted {
+  /*margin: 20px 0;*/
 }
