--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div>
-<h1>Welcome to G & E Properties</h1>
+<div class="row center-it">
+<h1 class="berkshire"=>Welcome to G & E Properties</h1>
 <p>Check out all we have!</p>
 </div>
