added Google Maps API

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['google_api_key'] %>">
+      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['AIzaSyB6G1DK3XR8Lh3Xd5FQftI01LhNMrTWY7M'] %>">
 </script>
   <%= csrf_meta_tags %>
 </head>
