--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<div class="dosis">
+<h1>About G & E Properties</h1>
+</div>
+
+<p>G & E Properties holds multiple, quality, multi-family rental apartments for tennants in Midtown Atlanta. With all properties being less that a block to Piedmont Park, renters love the location that goes along with their marvelous apartments. Please check out the properties we have, and feel free to contact if you have any questions or interest in anything we have. </p>
