--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <div class="row center-it">
 <h1 class="berkshire"=>Welcome to G & E Properties</h1>
-<p>Check out all we have!</p>
+<p><strong>Please look at our lovely rental properties in Midtown Atlanta, which are just a few steps away from Piedmont Park!</strong></p>
 </div>
