--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,2 +1,6 @@
+<div class="dosis">
 <h1>Contact Information</h1>
-<p>Find me in app/views/welcome/contact.html.erb</p>
+</div>
+
+<p>Phone: 404-231-1568</p>
+<p>Email: geproperties@gmail.com</p>
