--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="text-muted center-it">
             <p><strong>G&E Properties Inc.</strong></p>
-            <p> 404-231-1568</p>
+            <p><strong>gandeproperties@gmail.com     404-399-0904</strong></p>
         </div>
       </div>
     </footer>
