--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -12,21 +12,21 @@
     	<%= image_tag @property.entrance, alt: "entrace", class: "carousel-pics" %>
       <!-- <img src="231_entrance.jpg" alt="entrance"> -->
       <div class="carousel-caption">
-       Entrance to 231 12th Street
+       <!-- Entrance to 231 12th Street -->
       </div>
     </div>
   <div class="item">
     	<%= image_tag @property.kitchen, alt: "kitchen", class: "carousel-pics" %>
       <!-- <img src="..." alt="..."> -->
       <div class="carousel-caption">
-        Stainless Steel Appliances and Granite Countertops
+        <!-- Stainless Steel Appliances and Granite Countertops -->
       </div>
     </div>
     	<div class="item">
     	<%= image_tag @property.bathroom, alt: "kitchen", class: "carousel-pics" %>
       <!-- <img src="..." alt="..."> -->
       <div class="carousel-caption">
-        Beautiful Vanity and Walk-In Shower
+        <!-- Beautiful Vanity and Walk-In Shower -->
       </div>
     </div>
     ...
