--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,4 +2,4 @@
 <h1>About G & E Properties</h1>
 </div>
 
-<p>G & E Properties holds multiple, quality, multi-family rental apartments for tennants in Midtown Atlanta. With all properties being less that a block to Piedmont Park, renters love the location that goes along with their marvelous apartments. Please check out the properties we have, and feel free to contact if you have any questions or interest in anything we have. </p>
+<h3>G & E Properties holds multiple, quality, multi-family rental apartments for tenants in Midtown Atlanta. With all properties being less that a block from Piedmont Park, renters love the location that goes along with their marvelous apartments. Please check out the properties we have, and feel free to contact us if you have any further questions or interest in anything we have. </h3>
