--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -2,5 +2,7 @@
 <h1>Contact Information</h1>
 </div>
 
-<p>Phone: 404-231-1568</p>
-<p>Email: geproperties@gmail.com</p>
+<h2><strong> If you are interested or have any questions about any of our rental properties please do not hesitate to contact us!</strong></h2>
+
+<h3><strong>Phone: 404-399-0904</strong></h4>
+<h3><strong>Email: <a href="mailto:gandeproperties@gmail.com">gandeproperties@gmail.com</a></strong></h4>
