--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
 <div class="row center-it">
 <h1 class="berkshire"=>Welcome to G & E Properties</h1>
-<p><strong>Please look at our lovely rental properties in Midtown Atlanta, which are just a few steps away from Piedmont Park!</strong></p>
+<h3><strong>Our beautiful rentals are newly renovated and just steps from Piedmont Park. We strive to make sure you recieve a postivie, easy, and happy experience throughout. </strong></h3> </br >
+
+
+
 </div>
